--- a/public/index.html
+++ b/public/index.html
@@ -31,7 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=B612+Mono:wght@400;700&family=Gugi&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Robo Mania</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
